--- a/MDPage.xaml
+++ b/MDPage.xaml
@@ -1,14 +1,15 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <MasterDetailPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="PX3.MDPage">
+             x:Class="PX3.MDPage"
+             >
 
     <MasterDetailPage.Master>
     <ContentPage Title="Back">
-        <StackLayout VerticalOptions="CenterAndExpand" Padding="10" Spacing="15" >
-            <Label Text="Home"/>
-            <Label Text="Opcion 1"/>
-            <Label Text="Opcion 2"/>
+        <StackLayout VerticalOptions="CenterAndExpand" HorizontalOptions="CenterAndExpand" Padding="10" Spacing="15" >
+            <Label Text="Home" TextColor="Yellow"/>
+                <Label Text="Opcion 1" TextColor="Yellow"/>
+                <Label Text="Opcion 2" TextColor="Yellow"/>
         </StackLayout>
     </ContentPage>
   </MasterDetailPage.Master>
@@ -16,19 +17,13 @@
   <MasterDetailPage.Detail>
     <NavigationPage>
       <x:Arguments>
-                <ContentPage Title="Registro"  >
-                    <StackLayout VerticalOptions="Center"  Padding="10" Spacing="15" >
-                        
-                        <Entry Placeholder="Name" />
-                        <Entry Placeholder="Email" />
-                        <Entry Placeholder="Password" />
-                        <Entry Placeholder="Confirm Password" />
-
-                        <Button Text="Register" 
-               HorizontalOptions="FillAndExpand" VerticalOptions="Center" BackgroundColor="Red"
-                TextColor="White" FontSize="Caption" />
-
-                    </StackLayout>
+                <ContentPage Title="Master Detail Page"  >
+                    <Label Text="Esto es un Master Detail Page" 
+                           TextColor="Red" 
+                           VerticalOptions="CenterAndExpand"
+                           HorizontalOptions="Center"
+                           FontSize="Title"
+                           />
                     
                 </ContentPage>
       </x:Arguments>
